got rid of navbar again, but added some spacing to make sure footer stays at the bottom of the page

--- a/src/hoc/Container/Container.module.css
+++ b/src/hoc/Container/Container.module.css
@@ -71,6 +71,11 @@ h2 {
   margin: 40px 0px;
 }
 
+.blankNav {
+  height: 340px;
+  background: white;
+}
+
 @media (max-width: 650px) {
   .Container {
     width: 100%;
